Fix center content alignment and add footer color

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -55,6 +55,10 @@ a {
   padding: 15px;
 }
 
+.footer {
+  background-color: rgb(206, 206, 206);
+}
+
 .left-links, .right-links {
   /* align individual link items horizontally and add space between */
   display: flex;
@@ -62,7 +66,11 @@ a {
 }
 
 .content {
-  text-align: center;
+  /* center content regardless of page size */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttons {
